fixing responsiveness on ios devices

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -141,7 +141,7 @@ button {
       font-weight: 500;
       font-size: 16px;
       padding: 10px;
-      width: 70%;
+      width: 60%;
     }
 
     #cv {
@@ -197,7 +197,7 @@ button {
       button {
         padding: 10px;
         width: 50%;
-        width: 70%;
+        width: 60%;
       }
   
       #cv {
