--- a/src/components/develop/develop.css
+++ b/src/components/develop/develop.css
@@ -81,11 +81,11 @@
 
     .d-cta {
         display: flex;
-        gap: 2rem;
+        gap: 20px;
         position: absolute;
         top: 75%;
         left: 13%;
-        right: 2.5%;
+        /* right: 2.5%; */
     }
 }
 
